--- a/users/asset/scss/main.scss
+++ b/users/asset/scss/main.scss
@@ -213,7 +213,7 @@ img {
 .cards {
   background-color: #ffffff;
   border-radius: 5px;
-  margin: 10px 0;
+  margin: 30px 0;
   img {
     object-fit: cover;
   }
@@ -229,9 +229,8 @@ img {
       text-align: left;
     }
     p {
-      // font-family: Nunito;
       font-size: 16px;
-      // font-style: normal;
+
       font-weight: 600;
       line-height: 20px;
       letter-spacing: 0.02em;
@@ -244,46 +243,213 @@ img {
       justify-content: space-between;
       h6 {
         // font-family: Nunito;
-        font-size: 14px;
+        font-size: 12px;
         // font-style: normal;
         font-weight: 700;
         line-height: 16px;
         letter-spacing: 0.02em;
         text-align: left;
         color: #333333;
+        position: relative;
       }
     }
   }
 }
 
 .date {
+  margin-left: 20px;
   &::before {
     content: url("../../asset/imgs/ic_round-date-range.svg");
-    margin-right: 5px;
-    position: relative;
-    bottom: -5px;
+    // margin-right: 5px;
+    position: absolute;
+    // bottom: -5px;
+    left: -24px;
+    top: -4px;
   }
 }
+
 .location {
   &::before {
     content: url("../../asset/imgs/bytesize_location.svg");
-    margin-right: 5px;
-    position: relative;
-    bottom: -5px;
+    // margin-right: 5px;
+    position: absolute;
+    // bottom: -5px;
+    left: -22px;
+    top: -4px;
   }
 }
+
 .seats {
   &::before {
     content: url("../../asset/imgs/icomoon-free_ticket.svg");
-    margin-right: 5px;
-    position: relative;
-    bottom: -5px;
+    // margin-right: 5px;
+    position: absolute;
+    // bottom: -5px;
+    left: -25px;
+    top: -4px;
   }
+}
+
+.recommed {
+  margin-top: 50px;
+  .show_more {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 25px;
+    h4 {
+      font-size: 18px;
+    }
+    button {
+      background-color: transparent;
+      border: 0;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 19px;
+      letter-spacing: 0.02em;
+      cursor: pointer;
+      color: rgba(44, 51, 58, 0.8);
+      text-decoration: underline;
+    }
+  }
+}
+
+.ff_download {
+  margin-top: 50px;
+  .download_wrap {
+    .download {
+      h3 {
+        // font-family: Nunito;
+        font-size: 25px;
+        margin-bottom: 20px;
+        font-weight: 700;
+        line-height: 30px;
+        letter-spacing: 0em;
+        text-align: left;
+      }
+      p {
+        line-height: 22px;
+
+        letter-spacing: 0.02em;
+
+        color: rgba(44, 51, 58, 0.8);
+      }
+    }
+  }
+}
+
+.d_pic {
+  position: relative;
+  margin-top: 30px;
+  img {
+    position: absolute;
+    z-index: 4;
+    object-fit: cover;
+  }
+
+  .dd {
+    width: 78px;
+    height: 90px;
+    z-index: 10;
+    top: 70px;
+    left: 50px;
+  }
+  .tt {
+    width: 218px;
+    height: 200px;
+    right: 20px;
+  }
+}
+
+.round {
+  background: url(../../asset/imgs/section_lap.png) no-repeat top center/cover;
+  height: auto;
+  padding-bottom: 30px;
+  margin-top: 100px;
+}
+
+footer {
+  height: auto;
+  background-color: #ffffff;
+  box-shadow: -1px 1px 4px rgba(0, 0, 0, 0.16);
+  padding-top: 30px;
+  padding-bottom: 20px;
+  .folic {
+    .first_folic {
+      h1 {
+        font-size: 40px;
+        font-weight: 700;
+        margin-top: 20px;
+        line-height: 55px;
+        letter-spacing: 0em;
+        text-align: left;
+        color: #333333;
+        span {
+          font-size: 40px;
+          font-weight: 800;
+          color: #d982aa;
+          line-height: 55px;
+          letter-spacing: 0em;
+          text-align: left;
+        }
+      }
+      p {
+        margin-bottom: 30px;
+      }
+    }
+  }
+  .cage {
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 22px;
+    letter-spacing: 0.025em;
+    text-align: left;
+    margin-bottom: 10px;
+  }
+  ul {
+    margin-bottom: 40px;
+    li {
+      font-size: 16px;
+      margin-bottom: 10px;
+      font-weight: 400;
+      line-height: 22px;
+      letter-spacing: 0.025em;
+      text-align: left;
+    }
+  }
+  // .c_r {
+  //   p {
+  //     text-align: center;
+  //     margin: 20px auto;
+  //   }
+  // }
+  // .footer_pic {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   width: 80%;
+  //   margin: 20px auto;
+  //   img {
+  //     width: 30px;
+  //     height: 30px;
+  //     object-fit: cover;
+  //   }
+  // }
 }
 
 @media (min-width: 890px) {
   .navbar .nav_links {
     width: 30%;
+  }
+  .card_wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .cards {
+      width: 33%;
+    }
+  }
+  .ff_download .download_wrap .download h3 {
+    font-size: 30px;
+    line-height: 41px;
   }
 }
 
@@ -297,11 +463,27 @@ img {
       }
     }
   }
+
+  .card_wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .cards {
+      width: 48%;
+    }
+  }
 }
 
 @media (min-width: 768px) {
   .hamburger {
     display: none;
+  }
+  .download_wrap {
+    display: flex;
+    justify-content: space-between;
+    .download {
+      width: 50%;
+    }
   }
   .cc_m .gutter_wrapper img {
     height: 270px;
@@ -339,6 +521,23 @@ img {
 @media (max-width: 768px) {
   h1 {
     font-size: 25px;
+  }
+  .c_r {
+    p {
+      text-align: center;
+      margin: 20px auto;
+    }
+  }
+  .footer_pic {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    margin: 20px auto;
+    img {
+      width: 30px;
+      height: 30px;
+      object-fit: cover;
+    }
   }
   .container {
     padding: 0 20px;
@@ -384,6 +583,14 @@ img {
   }
   .ff_features {
     margin-top: 350px;
+  }
+  .card_wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    .cards {
+      width: 24.5%;
+    }
   }
 }
 
