--- a/users/asset/scss/event.css
+++ b/users/asset/scss/event.css
@@ -1,5 +1,5 @@
 .eventsbanner {
-  background-color: teal;
+  background: url(../../asset/imgs/backgroung.png) no-repeat center center/cover;
   height: 420px;
   width: 100%;
 }
@@ -62,6 +62,11 @@
   padding-right: 1.5rem;
 }
 
+.drive {
+  text-align: center;
+  margin: 0 auto;
+}
+
 .all_recommend h2 {
   margin-top: 50px;
   margin-bottom: 10px;
@@ -69,5 +74,163 @@
 
 .all_recommend .card_wrap .cards {
   margin: 15px 0;
+}
+
+.ff_details {
+  margin-top: 30px;
+}
+
+.ff_details h2 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.ff_details .ff_location {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.ff_details .ff_location .tickets h4 {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 22px;
+  margin-bottom: 6px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+.ff_details .about_events {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.ff_details .about_events h3 {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.ff_details .about_events p {
+  font-size: 16px;
+  margin-top: 25px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+}
+
+.fill_form {
+  background-color: #ffffff;
+  border-radius: 5px;
+  padding: 25px;
+  text-align: center;
+}
+
+.fill_form h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 33px;
+  letter-spacing: 0.02em;
+}
+
+.fill_form p {
+  font-size: 16px;
+  margin-top: 7px;
+  font-weight: 600;
+  line-height: 19px;
+  letter-spacing: 0.04em;
+}
+
+.fill_form .main {
+  text-align: left;
+  margin-top: 30px;
+}
+
+.fill_form .main h3 {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-bottom: 7px;
+}
+
+.fill_form .main label {
+  font-size: 16px;
+  font-weight: 700;
+  margin-right: 15px;
+}
+
+.fill_form .main .d_form .form1 label input {
+  width: 100%;
+  margin-bottom: 23px;
+  margin-top: 6px;
+  padding: 15px;
+  background-color: #f4f4f4;
+  border-radius: 5px;
+  border: 0;
+}
+
+.fill_form .main .d_form button {
+  max-width: 400px;
+  width: 100%;
+  cursor: pointer;
+  text-align: center;
+  height: 50px;
+  background-color: #bc658d;
+  border-radius: 5px;
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 18px;
+  border: 0;
+}
+
+.radio-item {
+  display: inline-block;
+  position: relative;
+  padding: 0 6px;
+  margin-bottom: 25px;
+}
+
+.radio-item input[type="radio"] {
+  display: none;
+}
+
+.radio-item label {
+  color: #333333;
+  font-weight: normal;
+}
+
+.radio-item label:before {
+  content: " ";
+  display: inline-block;
+  position: relative;
+  top: 5px;
+  margin: 0 5px 0 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 11px;
+  border: 2px solid #333333;
+  background-color: transparent;
+}
+
+.radio-item input[type="radio"]:checked + label:after {
+  border-radius: 11px;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 11px;
+  left: 12px;
+  content: " ";
+  display: block;
+  background: #bc658d;
 }
 /*# sourceMappingURL=event.css.map */
